SERVER-9086 Add missing initialize ordering edge for gcrypt

GitOrigin-RevId: afb4b7c71e697f6c2912e9a64c8b7e64c46da655